[package]
build = "build.rs"
edition = "2018"
name = "rust-car-service"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "3.3.2", features = ["rustls"]}
argon2 = "0.2"
chrono = {version = "0.4.19", features = ["serde"]}
color-backtrace = "0.5.0"
derive_more = "0.99.16"
env_logger = "0.9.0"
log = "0.4.14"
once_cell = "1.8.0"
ron = "0.6.4"
serde = "1.0.126"
serde_json = "1.0.64"
sqlx = {version = "0.5.5", features = [
  "runtime-async-std-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "offline",
]}
thiserror = "1.0.26"
uuid = {version = "0.8.2", features = ["serde", "v4"]}

[build-dependencies]
built = {version = "0.5.1", features = ["git2", "chrono"]}
